* Fix harpoon gun doing enormous damage on enemies.
* Fix train death animation.
* Fix TR1 wolf damage value inflicted on a close bite attack.
* Fix TR1 bear various original AI issues.
* Fix TR2 knife thrower AI.
* Fix TR2 doberman crashing the game when killed by explosive weapons.
* Fix volume change in settings not affecting voice track.
* Fix several lighting bugs.
* Overhaul look mode:
 - Allow for consistent and wider viewing angles while crawling, crouching, and hanging.
 - Improve movement and control.
 - Re-enable looking while performing up jump, backward jump, or backward crawl.
 - Add functionality to rotate slowly when holding Walk while using binoculars or lasersight.
* Add swinging blade.
* Add crumbling platform and add new OCBs for behaviour:
 - OCB 0: Default behaviour. When the player steps on the platform, it will shake and crumble after 1.2 seconds.
 - OCB > 0: When the player steps on the platform, it will crumble after the number of frames set in the OCB.
 - A positive value results in activation via player collision.
 - A negative value requires a trigger to activate.

Lua API changes:
* Add Flow::EnableLoadSave() function to disable savegames.
* Add Flow::EnablePointFilter() function to disable bilinear filtering.
* Add Lara::GetAmmoType() function to read the ammo that Lara is using.
* Add Lara::GetControlLock() and Lara::SetControlLock() functions to handle controls locking.
* Add Logic.HandleEvent() function to call node events.
* Add functions to load, save, and delete savegames.
* Make Vec2 object float-based instead of integer-based.
* Add Vec2 arithmetic for division with a number and multiplication with another Vec2.
* Add log messages warnings to functions AddCallback and RemoveCallback.
* Fix InventoryItem constructor, now it will accept compound values in Item Action parameter.
* Fix Moveable constructor forcing initial animation to 0 and hit points to 10, even if not specified.